@@ -8,6 +8,7 @@ import io.jsonwebtoken.security.Keys;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Component;
@@ -53,10 +54,10 @@ public class JwtTokenProvider {
     public String createRefreshToken(Long id){
         long now = (new Date()).getTime();
         // 3일
-        Date accessTokenExpiresIn = new Date(now + REFRESHTOKEN_EXPIRED_PERIOD);
+        Date refreshTokenExpiresIn = new Date(now + REFRESHTOKEN_EXPIRED_PERIOD);
         String refreshToken = Jwts.builder()
                 .setHeaderParam(Header.TYPE, Header.JWT_TYPE)
-                .setExpiration(accessTokenExpiresIn)
+                .setExpiration(refreshTokenExpiresIn)
                 .claim("id",id)
                 .signWith(KEY, SignatureAlgorithm.HS256)
                 .compact();
@@ -72,7 +73,7 @@ public class JwtTokenProvider {
             throw new RuntimeException("정보가 없는 토큰입니다.");
         }
         Integer i = (Integer) claims.get("id");
-        Long id = new Long(i);
+        Long id = Long.valueOf(i);
         // 정보 담아서 Authentication 리턴
         UserDTO userDTO = UserDTO.builder()
                 .id(id)
@@ -82,26 +83,29 @@ public class JwtTokenProvider {
     }
 
     // 토큰 정보 검증
-    public boolean validateToken(String token){
+    public boolean validateToken(String token) {
         try{
             Jwts.parserBuilder().setSigningKey(KEY).build().parseClaimsJws(token);
             return true;
         } catch (io.jsonwebtoken.security.SecurityException | MalformedJwtException e) {
             log.info("유효하지 않은 토큰입니다.", e);
+            throw new JwtException("유효하지 않은 토큰입니다.", HttpStatus.FORBIDDEN);
         } catch (ExpiredJwtException e) {
             log.info("만료된 토큰입니다.", e);
+            throw new JwtException("만료된 토큰입니다.", HttpStatus.FORBIDDEN);
         } catch (UnsupportedJwtException e) {
             log.info("지원하지 않는 토큰입니다.", e);
+            throw new JwtException("지원하지 않는 토큰입니다.", HttpStatus.FORBIDDEN);
         } catch (IllegalArgumentException e) {
             log.info("토큰의 클레임이 비어있습니다", e);
+            throw new JwtException("토큰의 클레임이 비어있습니다", HttpStatus.PRECONDITION_FAILED);
         }
-        return false;
     }
 
     public static Long getIdByAccessToken(HttpServletRequest request){
         String accessToken = request.getHeader("Authorization").substring(7);
         Integer i = (Integer) parseClaims(accessToken).get("id");
-        Long id = new Long(i);
+        Long id = Long.valueOf(i);
         return id;
     }
 
